dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(SPWCombine, 1.0, no-define)

dnl Initialize for LOFAR (may set compilers)
lofar_INIT

dnl Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl dnl Replace `main' with a function in -lfl:
dnl AC_CHECK_LIB(fl, main)
dnl dnl Replace `main' with a function in -lcosev_r:
dnl AC_CHECK_LIB(cosev_r, main)
dnl dnl Replace `main' with a function in -lcosnm_r:
dnl AC_CHECK_LIB(cosnm_r, main)
dnl dnl Replace `main' with a function in -lorb_r:
dnl AC_CHECK_LIB(orb_r, main)
dnl dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl dnl Replace `main' with a function in -lvport_r:
dnl AC_CHECK_LIB(vport_r, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl
dnl Check for LOFAR specific things
dnl
lofar_GENERAL(1)
lofar_AIPSPP(1)
lofar_INTERNAL(LCS/Common,Common,,1,Common/LofarTypes.h)
lofar_INTERNAL(LCS/ACC/PLC,PLC,,1,PLC/ProcessControl.h)

dnl
dnl Output Makefiles
dnl
AC_CONFIG_FILES([test/runctest.sh:autoconf_share/runctest.sh.in],
                [chmod +x test/runctest.sh])
AC_OUTPUT(
include/Makefile
include/SPWCombine/Makefile
src/Makefile
test/Makefile
Makefile
SPWCombine.spec
)
