# Generate the actual test script.
#configure_file(findenv.run_tmpl findenv.run_script)
#configure_file(tDemix.run_tmpl tDemix.run_script)

add_executable(tMirror tMirror.cc)
target_link_libraries(tMirror ${CASACORE_LIBRARIES})
add_test(tMirror tMirror)
#add_test(tMedian tMedian.cc)
#add_test(tAverager tAverager.cc)
#add_test(tMedFlagger tMedFlagger.cc)
#add_test(tPreFlagger tPreFlagger.cc)
#add_test(tPSet tPSet.cc)
#add_test(tUVWFlagger tUVWFlagger.cc)
add_executable(tPhaseShift tPhaseShift.cc)
target_link_libraries(tPhaseShift ${DPPP_OBJECT} ${COMMON_OBJECT} ${BLOB_OBJECT} ${DDECAL_OBJECT} ${PARMDB_OBJECT} ${AOFLAGGERSTEP_OBJECT} ${EXTRA_LIBRARIES})
add_test(tPhaseShift tPhaseShift)
#add_test(tStationAdder tStationAdder.cc)
#add_test(tScaleData tScaleData.cc)
#add_test(tApplyCal tApplyCal.cc)
#add_test(tApplyCalH5 tApplyCalH5.cc)
#add_test(tApplyCal2)
#add_test(tMultiApplyCal)
#add_test(tFilter tFilter.cc)
#add_test(tDemixer tDemixer.cc)
#add_test(tNDPPP tNDPPP.cc)
#add_test(tparse tparse.cc)
#add_test(tBaselineSelection tBaselineSelection.cc)
#add_test(tDemix)
#add_test(tPredict)
#add_test(tApplyBeam)
#add_test(tGainCal)
#add_test(tH5Parm tH5Parm)
#add_test(tGainCalH5Parm)
#add_test(tUpsample tUpsample.cc)
#add_test(tGridInterpolate tGridInterpolate.cc)
# add_test(tExpr tExpr.cc)
# add_test(tmeqarray tmeqarray.cc)
# add_test(test_flaggers test_flaggers.cc)
