INSTHDRS = \
		FlaggerStatistics.h \
		MsInfo.h \
		MsFile.h \
		ComplexMedianFlagger.h \
		FrequencyFlagger.h \
		ComplexMedianFlagger2.h \
		MADFlagger.h \
		BandpassCorrector.h \
		DataSquasher.h \
		DataBuffer.h \
		TimeBuffer.h \
		RunDetails.h \
		Pipeline.h 

NOINSTHDRS = PipelineProcessControl.h 

TCCHDRS =

pkginclude_HEADERS = Package__Version.h $(INSTHDRS) $(TCCHDRS)

noinst_HEADERS = $(NOINSTHDRS)

DOCHDRS = $(INSTHDRS) $(NOINSTHDRS)


include $(top_srcdir)/Makefile.common
